Initial rendering on OS X

--- a/Platform/OSX/NOVA - OS X/NOVA - OS X/Base.lproj/Main.storyboard
+++ b/Platform/OSX/NOVA - OS X/NOVA - OS X/Base.lproj/Main.storyboard
@@ -670,9 +670,12 @@
             <objects>
                 <viewController id="XfG-lQ-9wD" customClass="ViewController" sceneMemberID="viewController">
                     <view key="view" id="m2S-Jp-Qdl" customClass="NovaView">
-                        <rect key="frame" x="0.0" y="0.0" width="480" height="270"/>
+                        <rect key="frame" x="0.0" y="0.0" width="450" height="300"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </view>
+                    <connections>
+                        <outlet property="novaView" destination="m2S-Jp-Qdl" id="c2y-Zr-fcq"/>
+                    </connections>
                 </viewController>
                 <customObject id="rPt-NT-nkU" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
